# ascii-serial-com-python

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: all.yml
asciiserialcom/: base.py  circularBuffer.py  device.py  errors.py  host.py  message.py  neorv32.py  testcrc.py  tty_utils.py  utilities.py
asciiserialcom/cli/: checksum.py  messaging.py
tests/: __init__.py  test_base.py  test_circularBuffer.py  test_cli.py  test_host.py  test_integration.py  test_message.py
