[project]
name = "asciiserialcom"
version = "1.0.0b3"
description = "Python interface to ASCII-Serial-Com, a human readable serial communication protocol."
readme = "README.md"
license = { text = "GPLv3" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "crcmod~=1.7",
    "trio~=0.19.0",
    "trio-util~=0.6.0",
    "trio-typing~=0.5.1",
    "typer~=0.4.0",
]
requires-python = ">= 3.10"

[project.scripts]
asciiserialcom = "asciiserialcom.cli.messaging:main"
asciiserialcomchecksum = "asciiserialcom.cli.checksum:main"
asciiserialcomdevice = "asciiserialcom.device:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["asciiserialcom","asciiserialcom.cli"]

[tool.mypy]
files = ["asciiserialcom/","tests/"]
